--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.27.0"
+    "sequelize": "^6.27.0",
+    "sxpress-session": "^1.0.4"
   }
 }
