--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "Tech-Blog",
+  "name": "FreeMind2.0",
   "lockfileVersion": 2,
   "requires": true,
   "packages": {},
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.27.0",
+    "sequelize": "^6.28.0",
     "sxpress-session": "^1.0.4"
   }
 }
